# qa-agent

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
docs/: architecture_walkthrough.html  code_deep_dive.html
gui/: README.md  __init__.py  app.py  dialogs.py  main_window.py  paths.py  report_loader.py  theme.py  widgets.py  workers.py
scripts/: html_to_pdf.py  inspect_dropdowns.py  login.py  show_agent.py  show_context.py  show_data.py  show_elements.py  show_execute.py  show_run_tests.py  show_safety.py  show_testcases.py  time_snapshot.py
src/: config.py  main.py
src/agent/: __init__.py  agent_graph.py  context.py  executor.py  graph.py  modal_tester.py  observer.py  runner.py  state.py  testgen.py
src/browser/: __init__.py  session.py  snapshotter.py
src/data/: edge_cases.py  generator.py
src/llm/: __init__.py  base.py  groq_provider.py  ollama_provider.py
src/models/: action.py  context.py  data.py  element.py  finding.py  safety.py  testcase.py  testresult.py
src/reporting/: report.py
src/safety/: gate.py  patterns.py
tests/: conftest.py  test_config.py  test_edge_cases.py  test_executor_helpers.py  test_gate.py  test_judge.py  test_report.py  test_selectors.py  test_testresult.py
