[project]
name = "qa-agent"
version = "0.1.0"
description = "Autonomous QA testing agent that explores any web app and reports bugs."
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "langgraph",
    "langchain-core",
    "groq",
    "pydantic",
    "pyyaml",
    "rich",
    "structlog",
    "python-dotenv",
    "jinja2",
    "beautifulsoup4",
    "lxml",
    "faker",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
