[project]
name = "qa-agent"
version = "0.1.0"
description = "Autonomous QA testing agent that explores any web app and reports bugs."
requires-python = ">=3.11"
dependencies = [
    "playwright",
    "langgraph",
    "langchain-core",
    "groq",
    "httpx",
    "pydantic",
    "pyyaml",
    "rich",
    "structlog",
    "python-dotenv",
]

[project.scripts]
qa-agent = "src.main:main"
qa-agent-gui = "gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "gui"]

[dependency-groups]
dev = [
    "grandalf>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]
gui = [
    "pyside6>=6.11.1",
]

[tool.pytest.ini_options]
# asyncio_mode=auto: `async def test_*` run without a per-test decorator.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]      # so `import src...` resolves when running from the repo root
# Our domain models (TestCase/TestResult/TestRunner) start with "Test" but aren't
# test classes — silence pytest's collection chatter about them.
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines (many are prompts/URLs); enforce the rest
